# geophys

./: .gitignore  CMakeLists.txt  README.md
components/: volumedata.py
components/testdata/: volumedata_test_ascii_1.txt
docs/: .gitignore
docs/source/: conf.py  index.rst
docs/source/tools/: 3d-codec.rst
legacy/: CMakeLists.txt
legacy/AST/: CMakeLists.txt
legacy/AST/inv/: CMakeLists.txt
legacy/AST/inv/w19-2-par/: 3d-seis-w19-2.cpp  CMakeLists.txt  Makefile  bicsb.cpp  datatypes.h  haar.h  lsqr.cpp  matmul.h  spvec.cpp
legacy/AST/trace/: Makefile  findheadw.f  findhw.com  rayclass.f  trace2  trace_drw_only.f  trace_dw_only.f  trace_dwr.f  trace_dwr_big.f  trace_hw_only.f  trace_hw_only_1.f  trace_hwi.f  trace_hwr.f  trace_hwr_big.f  trace_rwi.f  tracegmt.c  tracerays2.f  tracerays2.f90  tracerlw.f  tracerlw_20.f  trhwgmt.c  trhwgmt_old.c  trhwgmt_temp.c
legacy/general/: CMakeLists.txt
legacy/general/2D_mask/: 2D_mask.cpp  Makefile
legacy/general/3D_mask/: Makefile  mask.cpp  mask_old.cpp  nrutil.cpp
legacy/general/3D_mask_let/: Makefile  haar.cpp  mask.cpp
legacy/general/3d2text/: 3d2text.c  Makefile
legacy/general/3dcrc2text/: 3dcrc2text.c  Makefile  iogras.c
legacy/general/3drc2text/: 3drc2text.c  Makefile
legacy/general/cattraces/: Makefile  cattraces.c  cattraces01.c  cattraces_old.c  cattraces_rlw.c  gmtio.h  lsqr.c  lsqr.h
legacy/general/chink/: Makefile  chink.cpp  readmy
legacy/general/comppeaks/: Makefile  gstdata.h  gsterror.cpp  gsterror.h  gstio.cpp  gstio.h  (+1 more)
tools/: .3d_codec_ascii.py.swp  3d-codec.py  3d_codec_ascii.py
(+262 files in other folders)
